# recomendador_livros_programaria_v2

./: .env  agentes_mcp_notebook.ipynb  buscador.py  chat.py  pyproject.toml
