[project]
name = "recomendador-livros-programaria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-google-genai>=4.2.3",
    "langgraph>=1.2.2",
    "pandas>=3.3.0",
    "mcp>=1.27.1",
    "pydantic>=2.0.0",
]
